[tool.poetry]
name = "netbox_ansible_modules"
version = "3.14.0"
description = "Ansible collection to interact with NetBox's API"
authors = ["Mikhail Yohman <mikhail.yohman@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
ansible-core = "2.16.*"
black = "*"
codecov = "*"
coverage = "7.3.2"
deepdiff = "*"
cryptography = "*"
jinja2 = "*"
jmespath = "*"
pynetbox = "^7"
pytest = "*"
pytest-mock = "*"
pytest-xdist = "*"
pytest-forked = "*"
pyyaml = "*"
mock = "*"
antsibull = "*"
importlib-metadata = "*"
pylint = "*"
pytz = "*"
packaging = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
